--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
       <version>4.13</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.4.0</version>
+    </dependency>
   </dependencies>
 
   <properties>
