--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
       <artifactId>mockito-core</artifactId>
       <version>4.4.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>1.6.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>1.6.6</version>
+    </dependency>
+
   </dependencies>
 
   <properties>
